force-app/main/default/objects/Contact/fields/AceptaPoliticaPrivacidad__c.field-meta.xml
<CustomField>
    <fullName>AceptaPoliticaPrivacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aceptación para temas de GDPR</description>
    <inlineHelpText>Se completará cuando firmen la ficha de visita</inlineHelpText>
    <label>Acepta la politica de privacidad</label>
    <type>Checkbox</type>
</CustomField>