force-app/main/default/objects/Contact/fields/Agitacion__c.field-meta.xml
<CustomField>
    <fullName>Agitacion__c</fullName>
    <description>Nos dice si el residente tiene agitaciones</description>
    <label>Agitación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>