force-app/main/default/objects/Contact/fields/Alergias__c.field-meta.xml
<CustomField>
    <fullName>Alergias__c</fullName>
    <description>Nos dice si el residente tiene alergias</description>
    <label>Alergias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>