force-app/main/default/objects/Contact/fields/AnoNacimientoNoUsar__c.field-meta.xml
<CustomField>
    <fullName>AnoNacimientoNoUsar__c</fullName>
    <description>Año de nacimiento</description>
    <formula>IF(NOT(ISBLANK( Edad__c )), YEAR(TODAY()) - Edad__c , null)</formula>
    <label>Año de nacimiento-No usar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>