force-app/main/default/objects/Contact/fields/ApellidosPersonaContacto__c.field-meta.xml
<CustomField>
    <fullName>ApellidosPersonaContacto__c</fullName>
    <description>Apellidos persona de contacto</description>
    <label>Apellidos Persona de Contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>