force-app/main/default/objects/Contact/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <description>Cargo que ocupa el contacto dentro de su entidad Prescriptora</description>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educador social / Trabajador social</fullName>
                <label>Trabajador social</label>
            </value>
            <value>
                <fullName>Psicologo/a</fullName>
            </value>
            <value>
                <fullName>Director/ Gerente</fullName>
            </value>
            <value>
                <fullName>Educador social</fullName>
            </value>
            <value>
                <fullName>Médico</fullName>
            </value>
            <value>
                <fullName>Enfermero/a</fullName>
            </value>
            <value>
                <fullName>Abogado/a</fullName>
            </value>
            <value>
                <fullName>Auxiliar de enfermería</fullName>
            </value>
            <value>
                <fullName>Docente</fullName>
            </value>
            <value>
                <fullName>Animador sociocultural</fullName>
            </value>
            <value>
                <fullName>Fisioterapeuta</fullName>
            </value>
            <value>
                <fullName>Terapeuta ocupacional</fullName>
            </value>
            <value>
                <fullName>Administración o técnico</fullName>
            </value>
            <value>
                <fullName>Voluntario</fullName>
            </value>
            <value>
                <fullName>Consultor/a</fullName>
            </value>
            <value>
                <fullName>Coordinación y jefatura</fullName>
            </value>
            <value>
                <fullName>Dirección operaciones</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Trabajador/a religioso/a</fullName>
                <label>Religioso/a</label>
            </value>
            <value>
                <fullName>Presidencia</fullName>
            </value>
            <value>
                <fullName>Asesor Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>