force-app/main/default/objects/Contact/fields/CausaBaja__c.field-meta.xml
<CustomField>
    <fullName>CausaBaja__c</fullName>
    <description>Motivo de la baja del residente</description>
    <label>Motivo de alta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EstadoContacto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conc. púb Amavir</fullName>
            </value>
            <value>
                <fullName>Concesión Plaza Pública No Amavir</fullName>
                <label>Conc. púb Otros</label>
            </value>
            <value>
                <fullName>Descontento</fullName>
            </value>
            <value>
                <fullName>Fin E. Temporal Rehabilitación</fullName>
                <label>Fin Es TempReha</label>
            </value>
            <value>
                <fullName>Fin E. Temporal Respiro</fullName>
                <label>Fin Es TempResp</label>
            </value>
            <value>
                <fullName>Hospitalización Larga Duración</fullName>
                <label>Hospital LargaE</label>
            </value>
            <value>
                <fullName>Inadaptación</fullName>
            </value>
            <value>
                <fullName>Motivos Económicos</fullName>
                <label>Mot. Económicos</label>
            </value>
            <value>
                <fullName>Renuncia Volunt</fullName>
            </value>
            <value>
                <fullName>Resid competenc</fullName>
            </value>
            <value>
                <fullName>Trasl otro Amav</fullName>
            </value>
            <value>
                <fullName>Trasp CD a Resi</fullName>
            </value>
            <value>
                <fullName>Exitus Hospital</fullName>
            </value>
            <value>
                <fullName>Exitus en Resid</fullName>
            </value>
            <value>
                <fullName>Trasl Domicilio</fullName>
            </value>
            <value>
                <fullName>Fallecimiento en Hospital</fullName>
                <isActive>false</isActive>
                <label>Fallecimiento en Hospital</label>
            </value>
            <value>
                <fullName>Fallecimiento en Residencia</fullName>
                <isActive>false</isActive>
                <label>Fallecimiento en Residencia</label>
            </value>
            <value>
                <fullName>Otro Recurso Domicilio</fullName>
                <isActive>false</isActive>
                <label>Otro Recurso Domicilio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>