force-app/main/default/objects/Contact/fields/Convertido__c.field-meta.xml
<CustomField>
    <fullName>Convertido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se mapea de candidato para indicar que el contacto vienen de la conversión</description>
    <label>Convertido</label>
    <type>Checkbox</type>
</CustomField>