force-app/main/default/objects/Contact/fields/ConvertidoFamiliar__c.field-meta.xml
<CustomField>
    <fullName>ConvertidoFamiliar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campos que se rellena cuando el familiar/ allegado se crea en la conversión mediante el Flujo</description>
    <label>Convertido Familiar</label>
    <type>Checkbox</type>
</CustomField>