force-app/main/default/objects/Contact/fields/ConVisita__c.field-meta.xml
<CustomField>
    <fullName>ConVisita__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que verifica que este contacto ha realizado visita</description>
    <label>Con visita</label>
    <type>Checkbox</type>
</CustomField>