force-app/main/default/objects/Contact/fields/DetalleOtraProcedencia__c.field-meta.xml
<CustomField>
    <fullName>DetalleOtraProcedencia__c</fullName>
    <description>Si marcamos Otros en Entorno de procedencia se debe de completar este campo</description>
    <label>Detalle de otra procedencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>