force-app/main/default/objects/Contact/fields/DetalleRecursoSocial__c.field-meta.xml
<CustomField>
    <fullName>DetalleRecursoSocial__c</fullName>
    <description>Indica si es necesario algún detalle relevanta del recurso social</description>
    <label>Detalle recurso social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>