force-app/main/default/objects/Contact/fields/DeterioroCognitivo__c.field-meta.xml
<CustomField>
    <fullName>DeterioroCognitivo__c</fullName>
    <description>Nos dice si el residente tiene deterioro cognitivo</description>
    <label>Deterioro Cognitivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>