force-app/main/default/objects/Contact/fields/DocumentoEntregadoRecomendacionesIngreso__c.field-meta.xml
<CustomField>
    <fullName>DocumentoEntregadoRecomendacionesIngreso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de tipo de casilla para conocer si se ha entregado el documento &quot;Recomendaciones para el Ingreso&quot;</description>
    <label>Documento &quot;Recomendaciones Ingreso&quot;</label>
    <type>Checkbox</type>
</CustomField>