force-app/main/default/objects/Contact/fields/EdadEstimada__c.field-meta.xml
<CustomField>
    <fullName>EdadEstimada__c</fullName>
    <description>Muestra la edad estimada del familiar</description>
    <label>Edad estimada</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>