force-app/main/default/objects/Contact/fields/EmailFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>EmailFamiliarAllegado__c</fullName>
    <description>Correo electrónico del familiar que contacta</description>
    <label>Correo electrónico Familiar/Allegado</label>
    <type>Email</type>
</CustomField>