force-app/main/default/objects/Contact/fields/EncargadoTramiteAutorizacionInternam__c.field-meta.xml
<CustomField>
    <fullName>EncargadoTramiteAutorizacionInternam__c</fullName>
    <description>Campo de tipo lista de selección para conocer el encargado de tramitar la solicitud de autorización de Internam.Judicial</description>
    <label>¿Quién Se Encarga De Tramitarla?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SolicitudAutorizInternamJudicial__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>