force-app/main/default/objects/Contact/fields/EstadoContacto__c.field-meta.xml
<CustomField>
    <fullName>EstadoContacto__c</fullName>
    <description>Estado general del residente</description>
    <label>Estado del contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>Ingresado</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>