force-app/main/default/objects/Contact/fields/ExpresaAdecuadamenteSusNecesidades__c.field-meta.xml
<CustomField>
    <fullName>ExpresaAdecuadamenteSusNecesidades__c</fullName>
    <description>Nos dice si el residente expresa adecuadamente sus necesidades</description>
    <label>¿Expresa adecuadamente sus necesidades?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>