force-app/main/default/objects/Contact/fields/ExtensionTelefono__c.field-meta.xml
<CustomField>
    <fullName>ExtensionTelefono__c</fullName>
    <description>Extensión de telefono del prescriptor</description>
    <label>Extensión teléfono</label>
    <length>12</length>
    <type>Text</type>
</CustomField>