force-app/main/default/objects/Contact/fields/FechaBaja__c.field-meta.xml
<CustomField>
    <fullName>FechaBaja__c</fullName>
    <description>Fecha en la que se da de baja el residente</description>
    <label>Fecha de alta</label>
    <type>Date</type>
</CustomField>