force-app/main/default/objects/Contact/fields/FechaFallecimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaFallecimiento__c</fullName>
    <description>Fecha del fallecimiento del residente</description>
    <label>Fecha de fallecimiento</label>
    <type>Date</type>
</CustomField>