force-app/main/default/objects/Contact/fields/GradoDiscapacidad__c.field-meta.xml
<CustomField>
    <fullName>GradoDiscapacidad__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Grado de la discapacidad del residente</description>
    <label>Grado de discapacidad</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>