force-app/main/default/objects/Contact/fields/IconoBeta__c.field-meta.xml
<CustomField>
    <fullName>IconoBeta__c</fullName>
    <description>Si el campo &quot;Beta&quot; esta relleno muestra un check, si no muestra una cruz</description>
    <formula>IF( Beta__c ,IMAGE(&apos;/resource/IconosIndicadorContacto/Alerta.jpg&apos;, &quot;&quot;, 30, 30) , IMAGE(&apos;/resource/IconosIndicadorContacto/OK.jpg&apos;,&quot;&quot;, 30, 30) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beta</label>
    <type>Text</type>
</CustomField>