force-app/main/default/objects/Contact/fields/IdExternoSAP__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSAP__c</fullName>
    <description>Identificador externo de SAP para los residentes</description>
    <externalId>true</externalId>
    <label>Identificador de SAP Residentes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>