force-app/main/default/objects/Contact/fields/IdExternoSAPContactos__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSAPContactos__c</fullName>
    <description>Nos indica el Id externo de SAP para los contactos</description>
    <externalId>true</externalId>
    <label>Identificador de SAP Contactos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>