force-app/main/default/objects/Contact/fields/Indicador__c.field-meta.xml
<CustomField>
    <fullName>Indicador__c</fullName>
    <formula>IF(  
OR(
Beta__c =True ,
MysteryClient__c= True
  ),
IMAGE(&apos;/resource/IconosIndicadorContacto/Alerta.jpg&apos;, &apos;Alerta&apos;, 30, 30) , IMAGE(&apos;/resource/IconosIndicadorContacto/OK.jpg&apos;,&apos;OK&apos;, 30, 30) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador</label>
    <type>Text</type>
</CustomField>