force-app/main/default/objects/Contact/fields/InternamientoInvoluntario__c.field-meta.xml
<CustomField>
    <fullName>InternamientoInvoluntario__c</fullName>
    <description>Estado del internamiento involuntario</description>
    <label>Internamiento involuntario con auto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InternamientoInvoluntario</valueSetName>
    </valueSet>
</CustomField>