force-app/main/default/objects/Contact/fields/LeyDependenciaConcedida__c.field-meta.xml
<CustomField>
    <fullName>LeyDependenciaConcedida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se le ha concedido la ley de dependencia</description>
    <label>Ley dependencia concedida</label>
    <type>Checkbox</type>
</CustomField>