force-app/main/default/objects/Contact/fields/LoHaceVoluntariamente__c.field-meta.xml
<CustomField>
    <fullName>LoHaceVoluntariamente__c</fullName>
    <description>Nos dice si el residente es ingresado voluntariamente</description>
    <label>¿Lo hace voluntariamente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>