force-app/main/default/objects/Contact/fields/NombrePersonaContacto__c.field-meta.xml
<CustomField>
    <fullName>NombrePersonaContacto__c</fullName>
    <description>Nombre persona de contacto</description>
    <label>Nombre Persona de contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>