force-app/main/default/objects/Contact/fields/NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>NumeroDocumento__c</fullName>
    <description>Número de indentificación del residente</description>
    <label>Número del documento</label>
    <type>TextArea</type>
</CustomField>