force-app/main/default/objects/Contact/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <description>Campo de texto para añadir observaciones que requiera el paciente</description>
    <label>Observaciones</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>