force-app/main/default/objects/Contact/fields/Oxigeno__c.field-meta.xml
<CustomField>
    <fullName>Oxigeno__c</fullName>
    <description>Nos dice si el residente necesita oxígeno</description>
    <label>Oxígeno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>