force-app/main/default/objects/Contact/fields/ParentescoContacto__c.field-meta.xml
<CustomField>
    <fullName>ParentescoContacto__c</fullName>
    <description>Parentesco que aparece en la ficha del contacto residente si tenemos la persona que nos contactó</description>
    <label>Parentesco Persona de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parentesco</valueSetName>
    </valueSet>
</CustomField>