force-app/main/default/objects/Contact/fields/PersonaContacto__c.field-meta.xml
<CustomField>
    <fullName>PersonaContacto__c</fullName>
    <description>Concatena Nombre y Apellido de la persona de contacto para mostrar un único campo</description>
    <formula>NombrePersonaContacto__c + &apos; &apos;+  ApellidosPersonaContacto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Persona Contacto</label>
    <type>Text</type>
</CustomField>