force-app/main/default/objects/Contact/fields/TelefonoFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>TelefonoFamiliarAllegado__c</fullName>
    <description>Teléfono del familiar que contacta</description>
    <inlineHelpText>Números de España (con y sin prefijo +34 y 9 dígitos), Alemania (+49 y 9-10 dígitos), Reino Unido (+44 y 9-10 dígitos), Bélgica (+32 y 9-10 dígitos), Países Bajos (+31 y 9-10 dígitos), Portugal (+351 y 9-10 dígitos), Italia (+39 y 10 dígitos) y Estados Unidos (+1 y 10 dígitos). No se aceptan espacios.</inlineHelpText>
    <label>Teléfono Familiar/Allegado</label>
    <type>Phone</type>
</CustomField>