force-app/main/default/objects/Contact/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <description>Tipo de documento de identificación del residente</description>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <label>Pasaporte</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>NIE</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>DNI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>