force-app/main/default/objects/Contact/fields/TipoDocumentoFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumentoFamiliarAllegado__c</fullName>
    <description>Tipo de documento del familiar que contacta</description>
    <label>Tipo documento Familiar/Allegado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>NIE</fullName>
            </value>
            <value>
                <fullName>DNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>