force-app/main/default/objects/Contact/fields/Transferido__c.field-meta.xml
<CustomField>
    <fullName>Transferido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de tipo check para saber si el contacto ha sido transferido</description>
    <label>Transferido</label>
    <type>Checkbox</type>
</CustomField>