force-app/main/default/objects/Contact/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <label>Curador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tutor</valueSetName>
    </valueSet>
</CustomField>