force-app/main/default/objects/Contact/fields/UnidadConveniencia__c.field-meta.xml
<CustomField>
    <fullName>UnidadConveniencia__c</fullName>
    <description>Indica la unidad de convivencia del residente</description>
    <label>Entorno de procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadConvivencia</valueSetName>
    </valueSet>
</CustomField>