force-app/main/default/objects/Contact/fields/VacunadoCovid__c.field-meta.xml
<CustomField>
    <fullName>VacunadoCovid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si ha sido vacunado por Covid 19</description>
    <label>Vacunado Covid</label>
    <type>Checkbox</type>
</CustomField>