force-app/main/default/objects/Contact/recordTypes/FamiliaAllegado.recordType-meta.xml
<RecordType>
    <fullName>FamiliaAllegado</fullName>
    <active>true</active>
    <description>Tipo de registro para los contactos de tipo familiar o allegados</description>
    <label>Familia/Allegado</label>
</RecordType>