force-app/main/default/objects/Contact/recordTypes/PotencialResidente.recordType-meta.xml
<RecordType>
    <fullName>PotencialResidente</fullName>
    <active>true</active>
    <description>Tipo de registro para los contactos de tipo residente</description>
    <label>Potencial/Residente</label>
</RecordType>