force-app/main/default/objects/Contact/recordTypes/Prescriptor.recordType-meta.xml
<RecordType>
    <fullName>Prescriptor</fullName>
    <active>true</active>
    <description>Tipo de registro para los contactos de tipo prescriptor</description>
    <label>Prescriptor</label>
</RecordType>