force-app/main/default/objects/Contact/validationRules/ContactoConNombreCuentaCorrecto.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactoConNombreCuentaCorrecto</fullName>
    <active>true</active>
    <description>Regla de validación para que imposibilite el poder crear un contacto con el nombre de la cuenta de un centro.</description>
    <errorConditionFormula>Account.RecordType.Name = &quot;Centro/Residencia&quot;</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>El contacto no puede crearse con el nombre de una cuenta de tipo &quot;Centro/Residencia&quot;, introduzca un nombre de cuenta válida.</errorMessage>
</ValidationRule>