force-app/main/default/objects/Contact/validationRules/FormatoDocumentoIdentidad.validationRule-meta.xml
<ValidationRule>
    <fullName>FormatoDocumentoIdentidad</fullName>
    <active>true</active>
    <description>Formato del NIF y NIE</description>
    <errorConditionFormula>OR( 
     AND( 
                 ISPICKVAL( TipoDocumento__c , &quot;01&quot;), 
                 NOT(REGEX( NumeroDocumento__c , &quot;[0-9]{8}[a-z A-Z]{1}&quot;)) 
        ), 
      AND( 
                ISPICKVAL( TipoDocumento__c , &quot;03&quot;), 
                NOT(REGEX( NumeroDocumento__c , &quot;[a-z A-Z]{1}[0-9]{7}[a-z A-Z]{1}&quot;)) 
      ) 
)</errorConditionFormula>
    <errorDisplayField>NumeroDocumento__c</errorDisplayField>
    <errorMessage>Por favor introduce el formato correcto: NIF (8 dígitos y 1 letra) / NIE (1 letra, 7 dígitos y 1 letra)</errorMessage>
</ValidationRule>