force-app/main/default/objects/Contact/validationRules/FormatoDocumentoIdentidadFamiliarAllegad.validationRule-meta.xml
<ValidationRule>
    <fullName>FormatoDocumentoIdentidadFamiliarAllegad</fullName>
    <active>true</active>
    <description>Formato del DNI y NIE</description>
    <errorConditionFormula>OR(
AND(
ISPICKVAL( TipoDocumentoFamiliarAllegado__c , &quot;DNI&quot;),
NOT(REGEX( NumeroDelDocumentoFamiliarAllegado__c , &quot;[0-9]{8}[a-z A-Z]{1}&quot;))
),
AND(
ISPICKVAL( TipoDocumentoFamiliarAllegado__c , &quot;NIE&quot;),
NOT(REGEX( NumeroDelDocumentoFamiliarAllegado__c , &quot;[a-z A-Z]{1}[0-9]{7}[a-z A-Z]{1}&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>NumeroDelDocumentoFamiliarAllegado__c</errorDisplayField>
    <errorMessage>Por favor introduce el formato correcto: DNI (8 dígitos y 1 letra) / NIE (1 letra, 7 dígitos y 1 letra)</errorMessage>
</ValidationRule>