force-app/main/default/objects/Contact/validationRules/FormatoMovilFamiliar.validationRule-meta.xml
<ValidationRule>
    <fullName>FormatoMovilFamiliar</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
LEFT(MovilFamiliarAllegado__c, 1) = &apos;+&apos;,
AND(
LEFT(MovilFamiliarAllegado__c, 3) &lt;&gt; &apos;+34&apos;,
LEFT(MovilFamiliarAllegado__c, 3) &lt;&gt; &apos;+32&apos;,
LEFT(MovilFamiliarAllegado__c, 3) &lt;&gt; &apos;+49&apos;,
LEFT(MovilFamiliarAllegado__c, 2) &lt;&gt; &apos;+1&apos;,
LEFT(MovilFamiliarAllegado__c, 3) &lt;&gt; &apos;+44&apos;)
),
AND( LEFT(MovilFamiliarAllegado__c, 3) = &apos;+34&apos;,
OR( LEN(MovilFamiliarAllegado__c) &lt; 12,
LEN(MovilFamiliarAllegado__c) &gt; 13
),
!ISBLANK(MovilFamiliarAllegado__c) ),
AND( LEFT(MovilFamiliarAllegado__c, 3) = &apos;+32&apos;,
OR( LEN(MovilFamiliarAllegado__c) &lt; 12,
LEN(MovilFamiliarAllegado__c) &gt; 13
),
!ISBLANK(MovilFamiliarAllegado__c) ),
AND( LEFT(MovilFamiliarAllegado__c, 3) = &apos;+49&apos;,
OR( LEN(MovilFamiliarAllegado__c) &lt; 12,
LEN(MovilFamiliarAllegado__c) &gt; 13
),
!ISBLANK(MovilFamiliarAllegado__c) ),
AND( LEFT(MovilFamiliarAllegado__c, 2) = &apos;+1&apos;,
OR( LEN(MovilFamiliarAllegado__c) &lt; 12,
LEN(MovilFamiliarAllegado__c) &gt; 12
),
!ISBLANK(MovilFamiliarAllegado__c) ),
AND( LEFT(MovilFamiliarAllegado__c, 3) = &apos;+44&apos;,
OR( LEN(MovilFamiliarAllegado__c) &lt; 12,
LEN(MovilFamiliarAllegado__c) &gt; 13
),
!ISBLANK(MovilFamiliarAllegado__c) ),
AND( LEFT(MovilFamiliarAllegado__c, 1) &lt;&gt; &apos;+&apos;,
OR( LEN(MovilFamiliarAllegado__c) &lt; 9,
LEN(MovilFamiliarAllegado__c) &gt; 9
),
!ISBLANK(MovilFamiliarAllegado__c) ),
CONTAINS(MovilFamiliarAllegado__c, &apos; &apos;)
)</errorConditionFormula>
    <errorDisplayField>MovilFamiliarAllegado__c</errorDisplayField>
    <errorMessage>El número de móvil del Familiar/Allegado no cumple el formato establecido</errorMessage>
</ValidationRule>